[gd_scene load_steps=2 format=3 uid="uid://bfq4r2xf4p8y5"]

[ext_resource type="Script" path="res://scripts/game/Game.gd" id="1_mnbvc"]

[node name="Game" type="Node2D"]
script = ExtResource("1_mnbvc")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBar" type="Panel" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0

[node name="BackButton" type="Button" parent="UI/HUD/TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -15.0
offset_right = 80.0
offset_bottom = 15.0
text = "返回"

[node name="GameTitle" type="Label" parent="UI/HUD/TopBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -15.0
offset_right = 100.0
offset_bottom = 15.0
text = "游戏中"
horizontal_alignment = 1

[node name="GameWorld" type="Node2D" parent="."]

[node name="Player" type="CharacterBody2D" parent="GameWorld"]

[node name="Placeholder" type="ColorRect" parent="GameWorld/Player"]
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
color = Color(0, 0.7, 1, 1)

[connection signal="pressed" from="UI/HUD/TopBar/BackButton" to="." method="_on_back_button_pressed"]
